<resources>
    <string name="hello_world">Test OpenCV</string>
    <string name="action_settings">Settings</string>
    <string name="select">Select USB Web Camera</string>
    <string name="camera">Camera</string>
    <string name="refresh">Refresh</string>
    <string name="no_device">No USB camera found</string>
    <string name="touch_screen_open">Touch screen to open camera</string>
    <string name="touch_screen_capture">Touch screen to capture or streaming </string>
    <string name="color_view">color</string>
    <string name="depth_view">depth</string>
    <string name="usb_device_attached">USB device attached</string>
    <string name="usb_device_detached">USB device detached</string>
    <string name="btn_capture">Capture</string>
    <string name="btn_preview">Preview</string>
    <string name="btn_calibrate">Calibrate</string>
    <string name="btn_undo">Undo</string>
    <string name="btn_measure">Measure</string>
    <string name="btn_reconnect">Reconnect Camera</string>
    <string name="btn_approve">Approve</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_switch">Switch</string>
    <string name="btn_reverse">Reverse</string>
    <string name="msg_illegal_handle">It is a illegal point , can not be approved</string>
    <string name="msg_legal_handle">It is a legal point , can be approved</string>
    <string name="msg_over_point_handle">Cannot approve more points</string>
    <string name="msg_distance_curve">Total distance curve:</string>
    <string name="msg_distance_line">Total distance line:</string>

    <string name="preview_image_settings_title">Preview image settings</string>
    <string name="preview_image_settings_summary">Resultion settings, view configure</string>
    <string name="firmware_version_settings_title">Firmware version settings</string>
    <string name="firmware_version_settings_summary">Firmware version settings R/W</string>
    <string name="firmware_register_settings_title">Firmware register settings</string>
    <string name="firmware_register_settings_summary">Firmware register settings R/W</string>
    <string name="camera_sensor_settings_title">Camera sensor settings</string>
    <string name="camera_sensor_settings_summary">AE, AWB</string>
    <string name="firmware_table_settings_title">Firmware table settings</string>
    <string name="firmware_table_settings_summary">Read firmware table/log</string>
    <string name="software_version_title">Software version</string>
    <string name="software_version_summary">Software version, license claim</string>
    <string name="fish_settings_title">Fish Settings</string>

    <string name="category_general_title">General</string>
    <string name="category_advance_title">Advance(Only support Erton IC)</string>
    <string name="category_view_title">View</string>
    <string name="post_process_title">Post process</string>
    <string name="option_title">Option</string>
    <string name="only_color_preview_checked_title">Only color preview</string>
    <string name="only_color_preview_checked_summary">Enable/disable only color preview </string>
    <string name="only_color_preview_frame_size_title">Only color preview frame size</string>
    <string name="only_color_preview_frame_rate_title">Only color preview frame rate</string>
    <string name="etron_preview_frame_size_title">Color preview frame size</string>
    <string name="depth_preview_frame_size_title">Depth preview frame size</string>
    <string name="etron_color_preview_frame_rate_title">Color preview frame rate</string>
    <string name="etron_depth_preview_frame_rate_title">Depth preview frame rate</string>
    <string name="input_frame_rate">Input frame rate</string>
    <string name="switch_view_window_title">Display window value</string>
    <string name="reverse_view_window_title">Reverse display window</string>
    <string name="reverse_view_window_summary">Enable/disable reverse display window</string>
    <string name="landscape_view_window_title">Landscape display window</string>
    <string name="landscape_view_window_summary">Enable/disable Landscape display window</string>
    <string name="flip_view_window_title">Flip display</string>
    <string name="flip_view_window_summary">Enable/disable Flip display</string>
    <string name="post_process">Post process</string>
    <string name="post_process_opencl">Enable post process</string>
    <string name="post_process_opencl_summary">Post process with OpenCL</string>
    <string name="monitor_framerate">Show fps</string>
    <string name="monitor_framerate_summry">Enable/disable show fps</string>
    <string name="firmware_version_settings_product_id">Product ID(Hex):</string>
    <string name="firmware_version_settings_vendor_id">Vendor ID(Hex):</string>
    <string name="firmware_version_settings_serialnum">Serial Number:</string>
    <string name="firmware_version_settings_text">Firmware version:</string>
    <string name="firmware_version_settings_unknown">Unknown</string>

    <string name="category_sensor_offset_title">Sensor offset:</string>
    <string name="category_rectify_table_title">Rectify table:</string>
    <string name="category_zd_table_title">ZD table:</string>
    <string name="category_log_title">Log:</string>
    <string name="sensor_offset_read_title">Sensor offset read</string>
    <string name="rectify_table_read_title">Rectify table read:</string>
    <string name="zd_table_read_title">ZD table read:</string>
    <string name="rectify_log_read_title">Rectify log read:</string>
    <string name="sensor_offset_write_title">Sensor offset write:</string>
    <string name="rectify_table_write_title">Rectify table write:</string>
    <string name="zd_table_write_title">ZD table write:</string>
    <string name="rectify_log_write_title">Rectify log write:</string>
    <string name="read_to_file">read data form camera to file:</string>
    <string name="write_from_file">write data to device form file:</string>
    <string name="dlg_ok">"OK"</string>
    <string name="dlg_cancel">"CANCEL"</string>
    <string name="rectify_table_get_focal_length_title">Get focal length:</string>
    <string name="rectify_table_get_principal_point_title">Get principal point</string>

    <string name="firmware_register_radiobtn_fw">FW register</string>
    <string name="firmware_register_radiobtn_asic">ASIC register</string>
    <string name="firmware_register_radiobtn_i2c">I2C register</string>
    <string name="chkbox_address_title">Register address size is 2 Bytes</string>
    <string name="chkbox_vaule_title">Register value size is 2 Bytes</string>
    <string name="firmware_register_slave_id">Slave ID only for I2C register(Hex):</string>
    <string name="firmware_register_address">Register address(Hex):</string>
    <string name="firmware_register_value">Register Value(Hex):</string>
    <string name="btn_get">Get</string>
    <string name="btn_set">Set</string>
    <string name="btn_read_flash">Read flash</string>
    <string name="btn_write_flash">Write flash</string>
    <string name="btn_IR_on">IR On</string>
    <string name="btn_IR_off">IR Off</string>
    <string name="text_IR_value">IR:</string>>
    <string name="firmware_register_hint">Please setup register config ...</string>

    <string name="software_app_version">App Version:1.2.3.17</string>
    <string name="software_sdk_version">SDK Version:1.0.1.8</string>
    <string name="software_version_license">Apache License</string>
    <string name="software_version_cliam">Copyright (c) 2018, MYNTAI Inc.\n All rights reserved.</string>

    <string name="camera_sensor_settings_ae">AE enabled</string>
    <string name="camera_sensor_settings_awb">AWB enabled</string>

    <string name="test_opencv_main_title">Test Open CV</string>
    <string name="test_opencv_main_summary">Test Open CV</string>

    <string name="test_ffmpg_main_title">Test FFMPEG</string>
    <string name="test_ffmpg_main_summary">Test FFMPEG</string>
    <string name="ffmpeg_cmd_hint">Enter command here. To run \"ffmpeg -version\" enter \"-version\"</string>
    <string name="device_not_supported">Device not supported</string>
    <string name="device_not_supported_message">FFmpeg is not supported on your device</string>
    <string name="run">Run</string>
    <string name="empty_command_toast">You cannot execute empty command</string>

    <string name="prepare_make_fish_video">Wait for prepare video...</string>
    <string name="set_fish_image_record_value">Set Fish image frame</string>

    <string name="firmware_update_title">Firmware R/W</string>
    <string name="firmware_update_summary">Firmware Read/Write</string>
    <string name="btn_read">Read</string>
    <string name="btn_write">Write</string>
    <string name="btn_write_from_backup">Write from backup</string>
    <string name="kdc_text">Keep data selection:</string>
    <string name="kdc_sel_1">Serial Number</string>
    <string name="kdc_sel_2">Sensor Position</string>
    <string name="kdc_sel_3">Rectify Table</string>
    <string name="kdc_sel_4">ZD Table</string>
    <string name="kdc_sel_5">Calibration Log</string>
    <string name="kdc_sel_6">Lookup Table</string>
    <string name="set_fw_tag">Set FW Tag</string>
    <string name="kdc_isp">ISP</string>

    <string name="sample_app_name">MYNTEYE-D SDK Sample</string>

    <string name="device_support_list">
        D-1000:\tUSB2.0: 8bit\n
        \t\t\t\t\t\tUSB3.0: 11bit / 14bit\n
        D-1200:\tUSB2.0 8bit / 11bit / 14bit\n
        \t\t\t\t\t\tUSB3.0: Downgraded to USB2.0</string>
    <string name="camera_open_fail">Camera open fail(code: %d), Please reinsert camera!</string>
    <string name="camera_open_fail_camera_closed">camera not open</string>
    <string name="camera_open_fail_u2_error">mobile support Usb2 so D1000 only support 8bit</string>
    <string name="camera_open_fail_u3_error">mobile support Usb3 so D1000 don\'t support 8bit</string>
    <string name="camera_open_fail_unknown_error">config is error !! Code: %d</string>
    <string name="config_open_camera">OPEN CAMERA</string>
    <string name="config_camera_source">Camera Source</string>
    <string name="config_camera_frame">Camera Frame</string>
    <string name="config_camera_resolution">Resolution</string>
    <string name="config_camera_lr_preview">L&amp;R Preview</string>
    <string name="config_camera_auto_ae">AE</string>
    <string name="config_camera_auto_awb">AWB</string>
    <string name="config_camera_color_preview">Color Preview</string>
    <string name="config_camera_depth_preview">Depth Preview</string>
    <string name="config_camera_color_fps">Color FPS</string>
    <string name="config_camera_depth_fps">Depth FPS</string>
    <string name="start_sample">START SAMPLE</string>

    <string name="camera_tool_switch_ir">Switch IR</string>
    <string name="camera_tool_save_ply">Save Ply</string>
    <string name="camera_tool_read_ply">Read Ply</string>
    <string name="camera_tool_save_ply_success">Save Ply Success</string>
    <string name="camera_tool_save_depth">Save Depth</string>
    <string name="camera_tool_read_depth">Read Depth</string>
    <string name="camera_tool_contain_color">Contain color？</string>
    <string name="camera_tool_contain_color_true">True</string>
    <string name="camera_tool_contain_color_false">False</string>
    <string name="camera_tool_cancel">Cancel</string>
    <string name="camera_open_fail_reopen">Camera open fail, Please back up and open again</string>
    <string name="camera_progress_save_depth">Saving depth value...</string>
    <string name="camera_progress_save_ply">Saving point cloud ...</string>
    <string name="camera_ir_value">Current IR: </string>
</resources>
