<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
        </ListView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_above="@id/camera_prarameters">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/config_camera_resolution"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <RadioButton
                    android:id="@+id/pixel480RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="480p"/>

                <RadioButton
                    android:id="@+id/pixel720RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="720p"/>

            </RadioGroup>

        </LinearLayout>

        <View
            android:layout_width="10dp"
            android:layout_height="1dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Bit"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <RadioButton
                    android:id="@+id/bit8RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="8bit"/>

                <RadioButton
                    android:id="@+id/bit11RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="11bit"/>

                <RadioButton
                    android:id="@+id/bit14RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="14bit"/>

            </RadioGroup>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/camera_prarameters"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/checkboxLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_above="@id/openCameraButton">

            <CheckBox
                android:id="@+id/previewLRCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:checked="false"
                android:text="@string/config_camera_lr_preview" />

            <CheckBox
                android:id="@+id/aeCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:checked="false"
                android:text="@string/config_camera_auto_ae" />

            <CheckBox
                android:id="@+id/awbCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:checked="false"
                android:text="@string/config_camera_auto_awb" />

            <CheckBox
                android:id="@+id/colorPreviewCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:checked="true"
                android:text="@string/config_camera_color_preview" />

            <CheckBox
                android:id="@+id/depthPreviewCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:checked="true"
                android:text="@string/config_camera_depth_preview" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <CheckBox android:id="@+id/color_fps_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:checked="false"
                android:text="@string/config_camera_color_fps"/>

            <CheckBox android:id="@+id/depth_fps_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:checked="false"
                android:text="@string/config_camera_depth_fps"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/config_camera_source"
                android:textSize="14sp"/>

            <Spinner
                android:id="@+id/cameraSourceSpinner"
                android:layout_width="match_parent"
                android:layout_height="60dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/config_camera_frame"
                android:textSize="14sp"/>

            <Spinner
                android:id="@+id/cameraFrameSpinner"
                android:layout_width="match_parent"
                android:layout_height="60dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/openCameraButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/config_open_camera"/>

    </LinearLayout>

</LinearLayout>